Add 'url' field and replace 'code' field with 'region'
