# storage/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
   title: 'Specialty Coffee in Cyprus API'
   version: 1.0.0
@@ -118,7 +118,8 @@ components:
           required:
             - name
             - description
-            - placeId
+            - region
+            - url
           properties:
             name:
               title: Name
@@ -126,8 +127,14 @@ components:
             description:
               title: Description
               type: string
+            region:
+              title: Region
+              type: string
             placeId:
               title: 'Google Place ID'
+              type: string
+            url:
+              title: 'Google Place URL'
               type: string
           type: object
         geometry:
